WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256371
REGRESSION(STP169): wpt /css/css-overflow/webkit-line-clamp-040.html
https://bugs.webkit.org/show_bug.cgi?id=256371
Summary
REGRESSION(STP169): wpt /css/css-overflow/webkit-line-clamp-040.html
Sam Sneddon [:gsnedders]
Reported
2023-05-05 08:24:28 PDT
c.f.:
https://wpt.fyi/results/css/css-overflow/webkit-line-clamp-040.html?run_id=5106385363140608&run_id=6300286681874432&run_id=5158926503378944&run_id=5082264357044224&run_id=5172734621908992
Attachments
Patch
(25.00 KB, patch)
2023-05-11 12:18 PDT
,
alan baradlay
no flags
Details
Formatted Diff
Diff
Patch
(26.95 KB, patch)
2023-05-11 17:55 PDT
,
alan baradlay
no flags
Details
Formatted Diff
Diff
Patch
(31.56 KB, patch)
2023-05-11 19:12 PDT
,
alan baradlay
no flags
Details
Formatted Diff
Diff
Patch
(30.29 KB, patch)
2023-05-12 06:34 PDT
,
alan baradlay
no flags
Details
Formatted Diff
Diff
Patch
(31.85 KB, patch)
2023-05-12 07:13 PDT
,
alan baradlay
no flags
Details
Formatted Diff
Diff
Patch
(30.51 KB, patch)
2023-05-12 13:33 PDT
,
alan baradlay
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(28.96 KB, patch)
2023-05-12 18:31 PDT
,
alan baradlay
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-05 08:24:50 PDT
<
rdar://problem/108949870
>
alan baradlay
Comment 2
2023-05-05 08:51:42 PDT
This change is intentional and I'd argue it's a progression (a slight divergence from what prefixed line-clamp used to produce, but surely a visual progression)
Sam Sneddon [:gsnedders]
Comment 3
2023-05-05 09:25:25 PDT
It does take us out of alignment with every other browser, and given -webkit-line-clamp is now spec'd in a CSS WG spec we should probably file an issue there if we want to change behaviour?
alan baradlay
Comment 4
2023-05-05 10:29:13 PDT
(In reply to Sam Sneddon [:gsnedders] from
comment #3
)
> It does take us out of alignment with every other browser, and given > -webkit-line-clamp is now spec'd in a CSS WG spec we should probably file an > issue there if we want to change behaviour?
oh didn't know it got spec'd. that's a :|.
alan baradlay
Comment 5
2023-05-11 12:18:10 PDT
Created
attachment 466321
[details]
Patch
EWS Watchlist
Comment 6
2023-05-11 12:21:26 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
alan baradlay
Comment 7
2023-05-11 17:55:40 PDT
Created
attachment 466327
[details]
Patch
alan baradlay
Comment 8
2023-05-11 19:12:23 PDT
Created
attachment 466330
[details]
Patch
alan baradlay
Comment 9
2023-05-12 06:34:19 PDT
Created
attachment 466332
[details]
Patch
alan baradlay
Comment 10
2023-05-12 07:13:26 PDT
Created
attachment 466333
[details]
Patch
alan baradlay
Comment 11
2023-05-12 13:33:04 PDT
Created
attachment 466336
[details]
Patch
alan baradlay
Comment 12
2023-05-12 18:31:43 PDT
Created
attachment 466341
[details]
[fast-cq]Patch
EWS
Comment 13
2023-05-13 06:08:01 PDT
Committed
264048@main
(8c497617ec2a): <
https://commits.webkit.org/264048@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 466341
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug